Rare INCOMPATIBILITY.

* Theory_Data extend operation is obsolete and needs to be the identity
function; merge should be conservative and not reset to the empty value.
Subtle INCOMPATIBILITY and change of semantics (due to
Theory.join_theory from Isabelle2020). Special extend/merge behaviour at
the begin of a new theory can be achieved via Theory.at_begin.


*** Isabelle/jEdit Prover IDE ***

* Improved GUI look-and-feel: the portable and scalable FlatLightLaf is
used by default on all platforms (appearance similar to IntelliJ IDEA).

* Improved markup for theory header imports: hyperlinks for theory files
work without formal checking of content.

* The prover process can download auxiliary files (e.g. 'ML_file') for
theories with remote URL. This requires the external "curl" program.

* Action "isabelle.goto-entity" (shortcut CS+d) jumps to the definition
of the formal entity at the caret position.

* The visual feedback on caret entity focus is normally restricted to
definitions within the visible text area. The keyboard modifier "CS"
overrides this: then all defining and referencing positions are shown.
See also option "jedit_focus_modifier".

* The jEdit status line includes widgets both for JVM and ML heap usage.
Ongoing ML ongoing garbage collection is shown as "ML cleanup".

* The Monitor dockable provides buttons to request a full garbage
collection and sharing of live data on the ML heap. It also includes
information about the Java Runtime system.

* Action "full-screen-mode" (shortcut F11 or S+F11) has been modified
for better approximate window size on macOS and Linux/X11. This is
particularly important for macOS 11.1 Big Sur, where the native
full-screen mode is incompatible with Java window management: it puts
dialog windows into an unusable state (Search, Hypersearch, etc.).

* PIDE support for session ROOTS: markup for directories.

* Update to jedit-5.6.0, the latest release. This version works properly